--- a/engines/attendance/app/views/attendance/notifications/show.html.haml
+++ b/engines/attendance/app/views/attendance/notifications/show.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{notifications_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
@@ -17,4 +17,3 @@
           %b= @notification.title
       .divider
       %p= @notification.message
-      
