--- a/engines/entity/app/views/entity/cadastres/show.html.haml
+++ b/engines/entity/app/views/entity/cadastres/show.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{entity.search_cadastres_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
@@ -79,4 +79,3 @@
               .sub.header
                 Email
               = @cadastre.email rescue nil
-    
