--- a/engines/attendance/app/views/attendance/cadastres/edit.html.haml
+++ b/engines/attendance/app/views/attendance/cadastres/edit.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{new_ticket_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
@@ -11,7 +11,7 @@
   .column.content-form
     - if @ticket.closed?(@action)
       .text-center
-        %p 
+        %p
           %h2 Dados #{@action.situation.name.pluralize}
         %p
           %i.icon.checkmark.huge.green
