--- a/engines/attendance/app/views/attendance/contacts/edit.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/edit.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{new_ticket_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
@@ -11,9 +11,9 @@
   .column.content-form
     - if @ticket.closed?(@action)
       .text-center
-        %p 
+        %p
           %h2 Dados #{@action.situation.name.pluralize}
         %p
           %i.icon.checkmark.huge.green
       .big-divider
-    = render 'form'    
+    = render 'form'
