--- a/engines/attendance/app/views/attendance/recadastre/contacts/edit.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/contacts/edit.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{recadastre_tickets_path(@ticket)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
