--- a/engines/attendance/app/views/attendance/recadastre/contacts/show.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/contacts/show.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{recadastre_ticket_contexts_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
@@ -9,12 +9,12 @@
 .big-divider
 .ui.grid.container
   .column.content-form
-    - if @context.finalizado? 
+    - if @context.finalizado?
       .text-center
         %h3 Seus dados de renda estão confirmados.
         %i.ui.icon.green.check.huge
         .big-divider
-    - if @context.em_análise? 
+    - if @context.em_análise?
       .text-center
         %h3 Seus dados de renda foram atualizados.
         %i.ui.icon.green.check.huge
