--- a/engines/attendance/app/views/attendance/recadastre/contexts/index.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/contexts/index.html.haml
@@ -1,9 +1,9 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{main_app.root_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Atualização Cadastral 
+    .title-header Atualização Cadastral
     .sub-title Protocolo ##{@ticket.protocol}
 .big-divider
 .ui.grid.container
@@ -17,7 +17,7 @@
               = link_to "Atualização de Dados Básicos", new_recadastre_ticket_context_path(@ticket, context_id: 1)
               .sub.header
                 = @ticket.recadastre_situation_action_by_context(1)
-     
+
       %tr
         %td
           %h4.ui.image.header
@@ -26,7 +26,7 @@
               = link_to "Atualização de Dependentes", new_recadastre_ticket_context_path(@ticket, context_id: 2)
               .sub.header
                 = @ticket.recadastre_situation_action_by_context(2)
-                
+
       %tr
         %td
           %h4.ui.image.header
@@ -54,8 +54,8 @@
         %br/
         .text-justify
           %p Declaro estar ciente da obrigatoriedade da atualização dos meus dados cadastrais junto à CODHAB sempre que ocorrer alteração de telefone, endereço, dependentes ou renda.
-          Declaro ter conhecimento completo da 
-          
+          Declaro ter conhecimento completo da
+
           %b.yellow{style: 'text-decoration: underline'}
             %a{href: 'http://www.codhab.df.gov.br/uploads/archive/files/3239b1f0464376f64e267eae43b2cfcb.pdf', target: '_blank'} Lei 3.877/2006
           e das exigências e critérios para participação dos programas habitacionais do Distrito Federal.
@@ -68,4 +68,3 @@
             = @ticket.ticket_status.external_name.titleize
       - else
         = link_to "Finalizar Atualização", recadastre_ticket_confirm_path(@ticket), class: "ui button green fluid #{@ticket.allow_button_recadastre? ? '' : 'disabled'}"
-      
