--- a/engines/attendance/app/views/attendance/recadastre/dependents/show.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/dependents/show.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{recadastre_ticket_context_dependents_path(@ticket, @context)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
