--- a/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     = link_to "<i class='big arrow left icon'></i>".html_safe, :back
   .thirteen.wide.mobile.column.text-center
     .title-header Envio de Documentação
