--- a/engines/attendance/app/views/attendance/recadastre/incomes/edit.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/incomes/edit.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{recadastre_ticket_context_income_path(@ticket, @context, @cadastre_mirror)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
