--- a/engines/attendance/app/views/attendance/chats/_form.html.haml
+++ b/engines/attendance/app/views/attendance/chats/_form.html.haml
@@ -1,6 +1,5 @@
 = simple_form_for @chat, url: chats_path, method: :post do |f|
-  = f.label "Assunto"
-  = f.association :chat_category, label: false, prompt: 'Selecione'
+  = f.association :chat_category, label: "Assunto", prompt: 'Selecione'
   .big-divider
   .column.text-center
-    = f.submit "Prosseguir", class: 'ui button yellow fluid'
+    = f.submit "Prosseguir", class: 'ui button yellow fluid', data: { disable_with: t(:disable_with) }
