--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -6,10 +6,11 @@
     .title-header Minhas Conversas (#{@chats.count})
     .sub-title Listagem de conversas
     .divider
-    - unless @chats.present?
-      = link_to "Nova Conversa", new_chat_path, class: 'ui button yellow fluid'
-    - else
-      = link_to "Nova Conversa", new_chat_path, class: 'ui button yellow fluid' if @chats.chat_closed?
+.ui.grid.container
+  - unless @chats.present?
+    = link_to "Inciar uma nova Conversa", new_chat_path, class: 'ui button yellow fluid'
+  - else
+    = link_to "Inciar uma nova Conversa", new_chat_path, class: 'ui button yellow fluid' if @chats.chat_closed?
 .ui.grid.container
   .column
     - if @chats.present?
@@ -32,4 +33,4 @@
                       %small
                         Quantidade de interações: #{chat.chat_comments.count}
                       .sub.header
-                        #{chat.created_at.strftime("%d/%m/%Y - %H:%M")}
+                        %small #{chat.created_at.strftime("%d/%m/%Y - %H:%M")}
