--- a/engines/attendance/app/views/attendance/contacts/_form.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/_form.html.haml
@@ -9,9 +9,9 @@
   .big-divider
   .column.text-center
     - if @ticket.confirmation_required?(@action)
-      = link_to "Meus dados estão corretos", ticket_confirm_path(@ticket, @action), class: 'ui button green fluid'
+      = link_to "Meus dados estão corretos", ticket_confirm_path(@ticket, @action), class: 'ui button green fluid', data: { disable_with: t(:disable_with)}
       .divider
-      = link_to "Atualizar meus dados", ticket_open_path(@ticket, @action), class: 'ui button yellow fluid'
+      = link_to "Atualizar meus dados", ticket_open_path(@ticket, @action), class: 'ui button yellow fluid', data: { disable_with: t(:disable_with)}
     - elsif @ticket.open?(@action)
       .divider
-      = f.submit "Salvar dados", class: "ui button green fluid"
+      = f.submit "Salvar dados", class: "ui button green fluid", data: { disable_with: t(:disable_with)}
