--- a/engines/attendance/app/views/attendance/dependents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/_form.html.haml
@@ -8,4 +8,4 @@
   = f.association :special_condition, include_blank: false, input_html: { disabled: @ticket.input_disabled?(@action) }
   = f.input :cid, input_html: { disabled: @ticket.input_disabled?(@action) }
   .big-divider
-  = f.submit "Salvar dados", class: 'ui button green fluid', data: { disable_with: "Salvando aguarde..."}
+  = f.submit "Salvar dados", class: 'ui button green fluid', data: { disable_with: t(:disable_with)}
