--- a/engines/attendance/app/views/attendance/contacts/edit.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/edit.html.haml
@@ -4,7 +4,7 @@
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header Atualização de contatos
-    .sub-title frase
+    .sub-title Formulário de atualização de contatos
 
 .big-divider
 .ui.grid.container
