--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,11 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0", :name => "viewport"}/
+    %meta{:content => "NO-CACHE", "http-equiv" => "CACHE-CONTROL"}/
+    %meta{:content => "NO-CACHE", "http-equiv" => "PRAGMA"}/
     %title Codhab
     %link{href: "https://fonts.googleapis.com/css?family=Nunito+Sans", rel: "stylesheet"}
+
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
