--- a/engines/candidate/app/views/candidate/cadastres/show.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/show.html.haml
@@ -34,9 +34,10 @@
       .ui.segment{style: 'padding-bottom: 10px !important; font-size: 11px !important'}
         %b Faixa #{list[1][0]}
 
-    .column
+    .column{style: 'text-align: center'}
       .ui.segment{style: 'padding-bottom: 10px !important; font-size: 11px !important'}
-        %b Posição: #{list[2]}
+        %b
+          #{number_with_delimiter(list[2], delimiter: ".") rescue nil} º 
 
 
 .divider
