--- a/engines/attendance/app/views/attendance/contacts/_form.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/_form.html.haml
@@ -15,3 +15,5 @@
     - elsif @ticket.open?(@action)
       .divider
       = f.submit "Salvar dados", class: "ui button green fluid", data: { disable_with: t(:disable_with)}
+    - else
+      = link_to "Corrigir minha atualização", ticket_open_path(@ticket, @action), class: 'ui button yellow fluid'
