--- a/engines/attendance/app/views/attendance/documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/documents/new.html.haml
@@ -1,7 +1,5 @@
 .ui.grid
-  .two.wide.mobile.column
-    = link_to "<i class='big arrow left icon'></i>".html_safe, :back
-  .thirteen.wide.mobile.column.text-center
+  .sixteen.wide.mobile.column.text-center
     .title-header Envio de documentação
     .sub-title Formulário de envio de documentação
 .big-divider
