--- a/engines/candidate/app/views/candidate/requeriments/new.html.haml
+++ b/engines/candidate/app/views/candidate/requeriments/new.html.haml
@@ -1,6 +1,12 @@
 .ui.grid
-  .sixtteen.wide.mobile.column.text-center
-    .title-header
-      Em breve
-    .big.divider
-.ui.grid
+  .two.wide.mobile.column
+    %a{href: "#{requeriments_path}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
+    .title-header Criação de requerimento
+    .sub-title Formulário de criação de renda
+
+.big-divider
+.ui.grid.container
+  .column.content-form
+    = render 'form'
