--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -10,11 +10,11 @@
         .column 
           - if [2, 3].include? @action.context_id
 
-            - if @action.send(document.target_method).where(target_id: params[:dependent_id]).any?
+            - if @action.send(document.target_method).where(target_id: @service.dependent_id).any?
               = f.fields_for document.target_method, @action.send(document.target_method).where(target_id: params[:dependent_id]) do |builder|
                 = render 'document_fields', f: builder, d: document
             - else
-              = f.fields_for document.target_method, @action.send(document.target_method) do |builder|
+              = f.fields_for document.target_method, @action.send(document.target_method).select { |s| s.target_id == params[:dependent_id].to_i } do |builder|
                 = render 'document_fields', f: builder, d: document
             = link_to_add_upload_fields "Adicionar arquivo", f, document.target_method, params[:dependent_id], 'Core::Candidate::DependentMirror', @action.send(document.target_method).any? {|key| key.persisted? }
           - else
