--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -81,3 +81,10 @@
         %i.icon.file.text.outline.huge.gray.text-center.text-center
     .text-center
       Meus Requerimentos
+  - if @ticket_policy.allow_to_manifestation? 
+    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
+      .ui.segment.text-center
+        %a{href: "#{attendance.open_doors_path}"}
+          %i.icon.building.huge.gray.text-center.text-center
+      .text-center
+        Portas abertas
