--- a/engines/attendance/app/views/attendance/cadastres/_form.html.haml
+++ b/engines/attendance/app/views/attendance/cadastres/_form.html.haml
@@ -27,3 +27,7 @@
       = f.submit "Salvar dados", class: "ui button green fluid", data: { disable_with: t(:disable_with)}
     - else
       = link_to "Corrigir minha atualização", ticket_open_path(@ticket, @action), class: 'ui button yellow fluid'
+      .divider
+      = link_to "Corrigir documentação", new_ticket_action_document_path(ticket_id: @ticket, action_id: @action), class: 'ui button blue fluid'
+      .divider
+      = link_to "Voltar para atualizações", new_ticket_path, class: 'ui button green fluid'
