--- a/engines/attendance/app/views/attendance/open_doors/index.html.haml
+++ b/engines/attendance/app/views/attendance/open_doors/index.html.haml
@@ -12,7 +12,7 @@
         %p
           %b Atenção
         %p
-          Você possui uma indicação ativa, não é possível realizar interesse por outro empreendimento neste momento.
+          Você possui uma manifestação ativa, não é possível realizar interesse por outro empreendimento neste momento.
 .ui.grid.container
   .column 
     %table.ui.celled.table
