--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -7,6 +7,53 @@
     .sub-title Listagem de conversas
     .divider
 .ui.grid.container
+  .ui.styled.accordion
+    .title
+      %i.dropdown.icon
+      Problema de "Aguardando Conexão"
+    .content
+      %p.transition.hidden A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
+    .title
+      %i.dropdown.icon
+      Quais são as extensões de arquivos permitidas?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      Qual o tamanho maximo dos arquivos enviados?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      W
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      What kinds of dogs are there?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      What kinds of dogs are there?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      What kinds of dogs are there?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+    .title
+      %i.dropdown.icon
+      What kinds of dogs are there?
+    .content
+      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+  .divider
+.ui.grid.container
+  .sixteen.wide.mobile.column.text-center
+    .sub-title.text-center
+      Minha dúvida não se encontra acima.
+      .divider
   - unless @chats.present?
     = link_to "Inciar uma nova Conversa", new_chat_path, class: 'ui button yellow fluid'
   - else
@@ -34,3 +81,10 @@
                         Quantidade de interações: #{chat.chat_comments.count}
                       .sub.header
                         %small #{chat.created_at.strftime("%d/%m/%Y - %H:%M")}
+:javascript
+  $('.accordion')
+    .accordion({
+      selector: {
+        trigger: '.title .icon'
+      }
+    });
