--- a/engines/attendance/app/views/attendance/requeriments/index.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/index.html.haml
@@ -11,13 +11,28 @@
     %table.ui.celled.table
       %tbody
         - if @requeriments.present?
-          - @requeriments.order(created_at: :desc).each do  |requeriment|
+          - @requeriments.order(created_at: :desc).each_with_index do  |requeriment,i|
             %tr
               %td
                 %h4.ui.file.text.outline.header
                   %i.icon.file
                   -if requeriment.digital_documents.present?
-                    %i.attach.icon
+                    %i.attach.icon{data_img:i}
+                      .ui.modal{id:i}
+                        %i.close.icon
+                        .header
+                          Anexos
+                        .image.content
+                          - requeriment.digital_documents.each_with_index do |images, i|
+                            - if File.extname(images.doc_path.to_s) == '.pdf'
+                              = "Arquivo nº #{i+1}"
+                              %p
+                                = image_tag 'http://www.codhab.df.gov.br/sample/pdf.png', class:'image_modal'
+                            - else
+                              = "Arquivo nº #{i+1}"
+                              %p
+                                = image_tag images.doc_path, class:'image_modal'
+
                   .content
                     %a{href:"#{requeriment_path(requeriment)}"}= requeriment.document_number ||= "Nenhum número gerado"
                     .sub.header
@@ -39,3 +54,9 @@
 .ui.grid.container-fluid
   .column
     = link_to "Enviar novo requerimento", new_requeriment_path, class: 'ui button yellow fluid' if @requeriments.where(finalized: false).count < 4
+
+:javascript
+  $('i.attach.icon').click(function(){
+    var t = $(this).attr('data_img')
+    $('#'+t).modal('show');
+  });
