--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -12,47 +12,23 @@
       %i.dropdown.icon
       Problema de "Aguardando Conexão"
     .content
-      %p.transition.hidden A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
+      %p.transition.hidden Este problema ocorre quando sua conexão está lenta, indisponível ou o fluxo de usuários no sistema está muito grande. Recomendamos que você tente novamente mais tarde. Caso o erro persista entre em contato com suporte.app@codhab.df.gov.br
     .title
       %i.dropdown.icon
       Quais são as extensões de arquivos permitidas?
     .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+      %p.transition.hidden Os arquivos permitidos para upload são: PDF, JPG, PNG, BMP
     .title
       %i.dropdown.icon
       Qual o tamanho maximo dos arquivos enviados?
     .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
-    .title
-      %i.dropdown.icon
-      W
-    .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
-    .title
-      %i.dropdown.icon
-      What kinds of dogs are there?
-    .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
-    .title
-      %i.dropdown.icon
-      What kinds of dogs are there?
-    .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
-    .title
-      %i.dropdown.icon
-      What kinds of dogs are there?
-    .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
-    .title
-      %i.dropdown.icon
-      What kinds of dogs are there?
-    .content
-      %p.transition.hidden There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.
+      %p.transition.hidden Os arquivos enviados deveram ser menores que 5MB.
   .divider
 .ui.grid.container
   .sixteen.wide.mobile.column.text-center
     .sub-title.text-center
-      Minha dúvida não se encontra acima.
+      %b
+        Minha dúvida não se encontra acima.
       .divider
   - unless @chats.present?
     = link_to "Inciar uma nova Conversa", new_chat_path, class: 'ui button yellow fluid'
