--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -61,6 +61,6 @@
   $('.accordion')
     .accordion({
       selector: {
-        trigger: '.title .icon'
+        trigger: '.title'
       }
     });
